385317 - Adds support for endorsed dirs. This also ensured we truly export the right class versions from the system bundle, via the java-profile